--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ h1 {
 h3 {
     text-align: right;
 }
-
 /* style by id using # */
 #content {
     max-width: 850px;
@@ -35,6 +34,16 @@ h3 {
     margin-bottom: 20px;
 }
 
+#first {
+    margin-left: 1px;
+    margin-right: 8px;
+}
+
+#last,
+#id,
+#title {
+    margin-right: 8px;
+}
 
 #employee-info {
     font-family: Arial, Helvetica, sans-serif;
