--- a/style.css
+++ b/style.css
@@ -57,8 +57,8 @@ h3 {
     padding: 8px;
 }
 
-#employee-info tr:nth-child(even) {
-    background-color: #f2f2f2;
+#employee-info tr:nth-child(odd) {
+    background-color: white;
 }
 
 #customers tr:hover {
