--- a/style.css
+++ b/style.css
@@ -20,16 +20,14 @@ h1 {
 h3 {
     text-align: right;
 }
-/* style by id using # */
+
 #content {
-    max-width: 850px;
+    max-width: 800px;
     margin: 0 auto;
-    /* Center horizontally */
 }
 
 #add-employee-form {
-    width: max-content;
-    justify-content: space-evenly;
+    width: 100%;
     padding: 1px;
     margin-bottom: 20px;
 }
@@ -46,9 +44,10 @@ h3 {
 }
 
 #employee-info {
+    width: 100%;
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
-    width: 100%;
+    
 }
 
 #employee-info td,
@@ -71,6 +70,7 @@ h3 {
 
 input[type=submit] {
     float: right;
+    margin-right: 13px;
 }
 
 input[type=submit]:hover {
