--- a/style.css
+++ b/style.css
@@ -24,6 +24,9 @@ h3 {
 #content {
     max-width: 800px;
     margin: 0 auto;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 30px;
 }
 
 #add-employee-form {
@@ -73,12 +76,7 @@ input[type=submit] {
     margin-right: 13px;
 }
 
-input[type=submit]:hover {
+input[type=submit]:hover,
+#delete:hover {
     background-color: darkgray;
-}
-
-div {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
 }
